--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ API=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
 #GOOGLE_CSE_ID=
 #claude_api_key=
 
-ADMIN_LIST=nms1990
+ADMIN_LIST=
 GROUP_LIST=
